# Shape-Interface

./: README.md
Shape-Interface/: CMakeLists.txt
Shape-Interface/include/: Circle.h  Rectangle.h  Shape.h  Triangle.h
Shape-Interface/src/: CMakeLists.txt  Rectangle.cpp  Triangle.cpp  main.cpp
